force-app/main/default/objects/Account/fields/Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Formula_Field__c</fullName>
    <formula>AnnualRevenue  / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>