force-app/main/default/objects/Account/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <formula>IF(ISPICKVAL(Type__c, &apos;Customer&apos;) , 1,  IF(ISPICKVAL(Type__c, &apos;Prospect&apos;), 2, 3) )</formula>
    <label>Importance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>