force-app/main/default/objects/Account/fields/NumOfOpps__c.field-meta.xml
<CustomField>
    <fullName>NumOfOpps__c</fullName>
    <label>NumOfOpps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>