force-app/main/default/objects/Account/fields/Primary_Core_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Core_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Core Account</label>
    <referenceTo>Core_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>