force-app/main/default/objects/Account/recordTypes/Custom_Account_RT.recordType-meta.xml
<RecordType>
    <fullName>Custom_Account_RT</fullName>
    <active>true</active>
    <label>Custom Account RT</label>
</RecordType>